# OTTO_Wheelchair

./: .gitignore  README.md
main-board/: CMakeLists.txt  README.md  sdkconfig
main-board/components/LoRa/: CMakeLists.txt  LoRa.c  LoRa_internal.h  README.md
main-board/components/LoRa/include/: LoRa.h
main-board/components/LoRa/port/: esp_idf_gpio.c  lora_port.h
main-board/components/buzzer/: CMakeLists.txt  README.md  buzzer.c
main-board/components/buzzer/include/: buzzer.h
main-board/components/gfx_anim_engine/: CMakeLists.txt  gfx_anim.c
main-board/components/gfx_menu_engine/: CMakeLists.txt  gfx_menu.c
main-board/components/gfx_ui_engine/: CMakeLists.txt  gfx_ui.c
main-board/components/gps/: CMakeLists.txt  Kconfig  README.md  gps.c
main-board/components/key/: CMakeLists.txt  Kconfig  key.c
main-board/components/lcd12864/: CMakeLists.txt  Kconfig  README.md  lcd12864.c
main-board/components/motion/: CMakeLists.txt  Kconfig  README.md  motion.c
main-board/components/uart_bus/: CMakeLists.txt  README.md  uart_bus.c
main-board/main/: CMakeLists.txt  main.c
server/: Cargo.toml
server/firmware/fake_gps/: fake_gps.ino
server/firmware/lora_receiver/: lora_receiver.ino
server/lora/: lora_send.py  send_gprmc.py
server/src/: coord.rs  db.rs  gps.rs  main.rs  serial.rs  web.rs  wheelchair.rs
server/static/: index.html
sub-board/: Cargo.toml  test_all_motors.py  test_motors.py  test_protocol.py  test_stepper.py
sub-board/.cargo/: config.toml
sub-board/src/: main.rs  motor.rs  protocol.rs
sub-board/src/motor/: tb6612.rs  uln2003.rs
(+17 files in other folders)
